--- a/Hello World/Hello World-Info.plist
+++ b/Hello World/Hello World-Info.plist
@@ -8,6 +8,19 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>icon-72.png</string>
+				<string>icon-144.png</string>
+				<string>icon-57.png</string>
+				<string>icon-114.png</string>
+			</array>
+		</dict>
+	</dict>
 	<key>CFBundleIdentifier</key>
 	<string>net.walm.helloworld</string>
 	<key>CFBundleInfoDictionaryVersion</key>
